<resources>
    <string name="app_name">WR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_running">러닝</string>
    <string name="menu_record">기록</string>
    <string name="menu_friend">친구</string>
    <string name="menu_competition">겨루기</string>
    <string name="menu_challenge">챌린지</string>
    <string name="menu_setting">설정</string>
</resources>